perf: optimize database queries for interactions

--- a/config/.env.example
+++ b/config/.env.example
@@ -1,7 +1,6 @@
 DEBUG=False
 SECRET_KEY=superrealproductionsecretkey
-DATABASE_NAME=graphql_social
-DATABASE_USER=postgres
-DATABASE_PASSWORD=mystrongpassword
-DATABASE_HOST=127.0.0.1
-DATABASE_PORT=5432
+
+
+
+DATABASE_URL=postgresql db url 
