--- a/config/.env.example
+++ b/config/.env.example
@@ -1,6 +1,6 @@
 DEBUG=False
 SECRET_KEY=superrealproductionsecretkey
-
-
-
 DATABASE_URL=postgresql db url 
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+CSRF_TRUSTED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+ALLOWED_HOSTS=localhost,127.0.0.1
