--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,22 +1,10 @@
-# Core
-Django>=4.2,<5.0
-psycopg2-binary>=2.9
-
-# GraphQL
-graphene-django>=3.0
-django-graphql-jwt>=0.3.4
-
-# Real-time (optional, for subscriptions)
-channels>=4.0
-channels-redis>=4.1
-
-# Utils
-django-filter>=23.5
-python-decouple>=3.8
-Pillow>=10.0
-
-# Dev Tools
-black>=24.4
-flake8>=7.0
-isort>=5.13
-django-debug-toolbar>=4.2
+# requirements.txt (runtime)
+Django==4.2.6
+graphene-django==3.2.0
+django-graphql-jwt==0.3.4
+psycopg-binary==3.1.10    # consider psycopg3 for Django 4.2+
+channels==4.3.0
+channels-redis==4.1.0
+django-filter==23.5
+python-decouple==3.8
+Pillow==10.0
