--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,10 +1,65 @@
-# requirements.txt (runtime)
-Django==4.2.6
-graphene-django==3.2.0
-django-graphql-jwt==0.3.4
-psycopg-binary==3.1.10    # consider psycopg3 for Django 4.2+
-channels==4.3.0
-channels-redis==4.1.0
-django-filter==23.5
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aioredis==1.3.1
+aiosignal==1.4.0
+aniso8601==7.0.0
+asgiref==3.9.1
+async-timeout==5.0.1
+attrs==25.3.0
+autobahn==24.4.2
+Automat==25.4.16
+cffi==2.0.0
+channels==3.0.5
+colorama==0.4.6
+constantly==23.10.4
+cryptography==45.0.7
+daphne==3.0.2
+dj-database-url==0.5.0
+Django==5.2.6
+django-channels-graphql-ws==0.9.1
+django-cors-headers==4.8.0
+django-crontab==0.7.1
+django-graphql-jwt==0.4.0
+exceptiongroup==1.3.0
+frozenlist==1.7.0
+graphene==2.1.9
+graphene-django==2.16.0
+graphql-core==2.3.2
+graphql-relay==2.0.1
+hiredis==3.2.1
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
+iniconfig==2.1.0
+msgpack==0.6.2
+multidict==6.6.4
+packaging==25.0
+pluggy==1.6.0
+promise==2.3
+propcache==0.3.2
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+Pygments==2.19.2
+PyJWT==2.10.1
+pyOpenSSL==25.2.0
+pytest==8.4.2
+pytest-django==4.11.1
+python-dateutil==2.9.0.post0
 python-decouple==3.8
-Pillow==10.0
+pytz==2025.2
+redis==6.4.0
+Rx==1.6.3
+service-identity==24.2.0
+singledispatch==4.1.2
+six==1.17.0
+sqlparse==0.5.3
+text-unidecode==1.3
+tomli==2.2.1
+Twisted==25.5.0
+txaio==25.6.1
+typing_extensions==4.15.0
+tzdata==2025.2
+yarl==1.20.1
+zope.interface==8.0
