--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -9,14 +9,14 @@ attrs==25.3.0
 autobahn==24.4.2
 Automat==25.4.16
 cffi==2.0.0
-channels
+channels==3.0.5
 colorama==0.4.6
 constantly==23.10.4
 cryptography==45.0.7
 daphne==3.0.2
 dj-database-url==0.5.0
 Django==5.2.6
-django-channels-graphql-ws
+django-channels-graphql-ws==0.9.1
 django-cors-headers==4.8.0
 django-crontab==0.7.1
 django-graphql-jwt==0.4.0
@@ -62,5 +62,6 @@ Twisted==25.5.0
 txaio==25.6.1
 typing_extensions==4.15.0
 tzdata==2025.2
+whitenoise==6.11.0
 yarl==1.20.1
 zope.interface==8.0
